<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To-Do Tasks Manager</string>
    <string name="button_add">New task</string>
    <string name="button_clear">Clear completed</string>
    <string name="edit_text_hint_new_task">Type here your new task…</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
</resources>
